# num-bigint

./: .travis.yml  Cargo.toml  README.md  RELEASES.md  before.txt  bors.toml  build.rs
.github/workflows/: ci.yaml  master.yaml  pr.yaml
benches/: bench_main.rs  bigint.rs  bigintsmall.rs  factorial.rs  gcd.rs  roots.rs  shootout-pidigits.rs
benches/benchmarks/: egcd.rs  factorial.rs  gcd.rs  mod.rs  prime_benches.rs  roots.rs
benches/rng/: mod.rs
benchmark_crate/: Cargo.toml
benchmark_crate/benches/: shootout-pidigits.rs
benchmark_crate/benches/benchmarks/: bigint.rs  roots.rs
ci/: rustup.sh  test_full.sh
ci/big_quickcheck/: Cargo.toml
ci/big_quickcheck/src/: lib.rs
ci/big_rand/: Cargo.toml
ci/big_rand/src/: lib.rs  torture.rs
ci/big_rand_0_10/: Cargo.toml
ci/big_rand_0_10/src/: bigint.rs  biguint.rs  lib.rs  torture.rs
ci/big_rand_0_9/: Cargo.toml
ci/big_rand_0_9/src/: lib.rs
ci/big_serde/: Cargo.toml
ci/big_serde/src/: lib.rs
criterion/: Cargo.toml  Criterion.toml
criterion/benches/: bigint.rs  factorial.rs  gcd.rs  roots.rs
examples/: primes.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: algorithms.rs  big_digit.rs  bigint.rs  bigint_small.rs  bigprime.rs  bigrand.rs  biguint.rs  bigurational.rs  lib.rs  macros.rs  monty.rs  prime.rs  step.rs  traits.rs
src/algorithms/: bits.rs  cmp.rs  div.rs  gcd.rs  jacobi.rs  mac.rs  mod.rs  mod_inverse.rs  partial.rs  pxgcd.rs  shl.rs  shr.rs  sub.rs
src/big_digit/: inline.rs  vec.rs
src/bigint/: addition.rs  arbitrary.rs  bits.rs  convert.rs  division.rs  multiplication.rs  power.rs  shift.rs  subtraction.rs  true_division.rs  truncate.rs
src/bigint_small/: addition.rs  bits.rs  convert.rs  division.rs  multiplication.rs  power.rs  shift.rs  subtraction.rs
src/bigrand/: distr.rs  traits.rs
src/biguint/: addition.rs  algorithms.rs  arbitrary.rs  bits.rs  convert.rs  division.rs  factorial.rs  iter.rs  iter_be.rs  monty.rs  multiplication.rs  ntt.rs  power.rs  serde.rs  shift.rs  subtraction.rs  true_division.rs  truncate.rs
src/tests/: bigint.rs  biguint.rs
tests/: bigint.rs  bigint_allocation_size.rs  bigint_bitwise.rs  bigint_scalar.rs  biguint.rs  biguint_allocation_size.rs  biguint_scalar.rs  fuzzed.rs  modpow.rs  quickcheck.rs  rand.rs  roots.rs  serde.rs  torture.rs
tests/consts/: mod.rs
tests/macros/: mod.rs
