[package]
authors = ["The Rust Project Developers"]
description = "Big integer implementation for Rust"
documentation = "https://docs.rs/num-bigint"
homepage = "https://github.com/rust-num/num-bigint"
keywords = ["mathematics", "numerics", "bignum"]
categories = [ "algorithms", "data-structures", "science" ]
license = "MIT/Apache-2.0"
name = "num-bigint"
repository = "https://github.com/rust-num/num-bigint"
version = "0.3.0-pre"
readme = "README.md"
build = "build.rs"
publish = false
exclude = ["/bors.toml", "/ci/*", "/.github/*"]
edition = "2018"

[package.metadata.docs.rs]
features = ["std", "serde", "rand", "quickcheck"]

[[bench]]
name = "bigint"

[[bench]]
name = "factorial"

[[bench]]
name = "gcd"

[[bench]]
name = "roots"

[[bench]]
harness = false
name = "shootout-pidigits"

[dependencies]

[dependencies.num-integer]
version = "0.1.42"
default-features = false
features = ["i128"]

[dependencies.num-traits]
version = "0.2.11"
default-features = false
features = ["i128"]

[dependencies.rand]
optional = true
version = "0.7"
default-features = false

[dependencies.serde]
optional = true
version = "1.0"
default-features = false

[dependencies.quickcheck]
optional = true
version = "0.9"
default-features = false

[features]
default = ["std"]
std = ["num-integer/std", "num-traits/std"]

[build-dependencies]
autocfg = "1"
