[package]
name = "big_quickcheck"
version = "0.1.0"
authors = ["Josh Stone <cuviper@gmail.com>"]
edition = "2018"

[dependencies]
num-integer = "0.1.42"
num-traits = "0.2.11"
quickcheck_macros = "1"

[dependencies.quickcheck]
version = "1"
default-features = false

[dependencies.num-bigint]
features = ["quickcheck"]
path = "../.."
